# postep

./: .gitignore  Cargo.toml  README.md  tsconfig.base.json
.github/workflows/: alpha-android-release.yml  mobile-e2e.yml
android-emulator-screenshots/0c4f076c590c5e6c00cbb9d8cf53413425bfd0de/diff/: summary.json  summary.md
android-emulator-screenshots/1707115614b2377db9712a1ca717848051132199/diff/: summary.json  summary.md
android-emulator-screenshots/3fef56eb9f818fb105341595efb1769147910cb5/diff/: summary.json  summary.md
android-emulator-screenshots/4635ac689cb8d344e3d6d9aa0ebf757ad988205a/diff/: summary.json  summary.md
android-emulator-screenshots/78a38d9ce33d51334eac6d9115f3866aef423ef7/diff/: summary.json  summary.md
android-emulator-screenshots/8e7f3065233bf27d8d021ed743d871be6e4d2b2a/diff/: summary.json  summary.md
android-emulator-screenshots/a27b5a1144bf42a02cc85f680a8429757d9a685a/diff/: summary.json  summary.md
android-emulator-screenshots/c6095bbc4d8d305b51784b6f3c86f3d92eac28f3/diff/: summary.json  summary.md
android-emulator-screenshots/da68df2d749ff8e0298fa1279d1a77e90aa0a2d7/diff/: summary.json  summary.md
android-emulator-screenshots/e87359aa78e45a4fa9fb221fa1c070cb4e14a254/diff/: summary.json  summary.md
android-emulator-screenshots/fdf72c3fd697af8507123a39328c96b3dd2c45fd/diff/: summary.json  summary.md
android-emulator-screenshots/fe2b8e1022cd6f9ecb8178dd76b3234039f3b493/diff/: summary.json  summary.md
apps/mobile/: app.json  expo-env.d.ts  metro.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
apps/mobile/__tests__/: bridgeOrgParser.test.ts  bridgePathNormalization.test.ts  documentPathResolution.test.ts  editorFrontendBenchmarks.test.ts  mainFeatureWorkflows.test.ts  orgDocumentActions.test.ts  orgLexicalModel.test.ts  orgSlateModel.test.ts  orgWarmCache.test.ts  routeSwitchingPerformance.test.ts  safAgendaSources.test.ts  safRoamSources.test.ts
apps/mobile/__tests__/support/: editorFrontendBenchmark.ts
apps/mobile/app/: _layout.tsx  index.tsx
apps/mobile/app/agenda/: index.tsx
apps/mobile/app/capture/: index.tsx
apps/mobile/app/habits/: index.tsx
apps/mobile/app/roam/: index.tsx
apps/mobile/app/settings/: index.tsx
apps/mobile/components/: E2ENav.tsx  LexicalDocument.tsx  SlateDocument.tsx
apps/mobile/e2e/: capture-android-screenshots.sh  compare-screenshots.mjs  run-android-maestro.sh
apps/mobile/e2e/maestro/: full-org-workflow.yaml
apps/mobile/e2e/web/: full-org-workflow.spec.ts
apps/mobile/hooks/: useBridgeEvent.ts
apps/mobile/lib/: agendaSources.ts  documentSources.ts  mainFeatureWorkflows.ts  notePreviews.ts  orgDocumentActions.ts  orgLexicalModel.ts  orgSlateModel.ts  orgWarmCache.ts  queryKeys.ts  registerContentUriModule.ts  roamSources.ts  roamViewModel.ts
apps/mobile/plugins/: withPostepContentUri.js
apps/mobile/store/: orgConfig.ts
apps/mobile/types/: slate.d.ts
crates/org_app/: Cargo.toml  build.rs
crates/org_app/src/: app.rs  lib.rs  main.rs
crates/org_app/src/ui/: appwindow.slint
crates/org_bridge/: Cargo.toml
crates/org_bridge/src/: lib.rs
crates/org_core/: Cargo.toml
crates/org_core/src/: agenda.rs  habit.rs  lib.rs  service.rs
crates/org_domain/: Cargo.toml
crates/org_domain/src/: agenda.rs  document.rs  habit.rs  lexical.rs  lib.rs  notifications.rs  service.rs  slate.rs
crates/org_domain/tests/: generated_data.rs  ux_responsiveness.rs
crates/org_roam/: Cargo.toml
crates/org_roam/src/: lib.rs
crates/org_sync/: Cargo.toml
crates/org_sync/src/: lib.rs
docs/: android-storage.md  architecture.md  org-roam-frontend-plan.md  ui-redesign.md
mobile/android/: README.md  build.gradle  settings.gradle
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/res/values/: strings.xml
mobile/ios/: README.md
