[workspace]
members = [
    "crates/org_core",
    "crates/org_app",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
orgize = "0.9"
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = ["glow", "wgpu", "android-native-activity", "default_fonts", "wayland", "x11"] }
winit = { version = "0.30", default-features = false, features = ["x11", "wayland", "rwh_06", "android-native-activity"] }
wgpu = { version = "27.0.1", default-features = false, features = ["wgsl", "dx12"] }
parking_lot = "0.12"
notify = "6.1"
walkdir = "2.5"
tracing = "0.1"
tracing-subscriber = "0.3"
rfd = "0.14"
