[workspace]
members = [
    "crates/org_core",
    "crates/org_app",
    "crates/org_bridge",
    "crates/org_domain",
    "crates/org_sync",
    "crates/org_roam",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
orgize = "0.9"
parking_lot = "0.12"
notify = "6.1"
walkdir = "2.5"
tracing = "0.1"
tracing-subscriber = "0.3"
petgraph = "0.6"
tempfile = "3.10"
once_cell = "1.19"
