[package]
name = "org_app"
edition = "2021"
version = "0.1.0"
license = "MIT"
default-run = "postep_desktop"

[lib]
name = "org_app"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "postep_desktop"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
org_core = { path = "../org_core" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
winit = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
rfd = { workspace = true }
