[package]
name = "org_app"
edition = "2021"
version = "0.1.0"
license = "MIT"
default-run = "postep_desktop"

[lib]
name = "org_app"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "postep_desktop"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
org_core = { path = "../org_core" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
slint = { version = "1.5.0", features = ["std", "backend-android-activity-05", "renderer-winit-femtovg"] }

[build-dependencies]
slint-build = "1.5.0"
