[package]
name = "org_bridge"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
napi = { version = "2", features = ["serde-json"] }
napi-derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
org_core = { path = "../org_core" }
org_roam = { path = "../org_roam" }
org_domain = { path = "../org_domain" }
org_sync = { path = "../org_sync" }
once_cell = { workspace = true }
parking_lot = { workspace = true }

[build-dependencies]
napi-build = "2"
