[package]
name = "org_core"
edition = "2021"
version = "0.1.0"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
orgize = { workspace = true }
parking_lot = { workspace = true }
notify = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
