[package]
name = "org_sync"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
org_domain = { path = "../org_domain" }
